<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_zhuce"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="mine.activitys.ZhuceActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/app_newuser"
        android:gravity="center"
        android:id="@+id/text"
        android:background="@color/color_user_top"/>
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/name"
        android:layout_below="@+id/text"
        android:layout_height="wrap_content"
        android:hint="@string/app_zhuce_name"
        android:layout_marginTop="40dp"/>
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/pass"
        android:layout_below="@+id/name"
        android:layout_height="wrap_content"
        android:hint="@string/app_zhuce_pass"
        android:layout_marginTop="40dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/surepass"
        android:layout_below="@+id/pass"
        android:hint="@string/app_zhuce_surepass"
        android:layout_marginTop="40dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_zhuce_email"
        android:layout_below="@+id/surepass"
        android:id="@+id/email"
        android:layout_marginTop="40dp"/>
    <Button
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="40dp"
        android:gravity="center"

        android:id="@+id/zhuce"
        android:background="@color/color_home_top_bu"
        android:text="@string/app_zhuce_zhuce"/>
</RelativeLayout>
