<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="mine.activitys.Login_Activity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/uik_nav_home_selected"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:id="@+id/username"
        android:gravity="center"
        android:hint="@string/app_usernames"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_below="@+id/username"
        android:hint="@string/app_pass"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="300dp"
        android:id="@+id/zhuce"
        android:text="@string/app_zhuce"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_login"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/zhuce"
        android:id="@+id/login"
        android:background="@color/color_home_top"/>
</RelativeLayout>
